--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Autovermietung | Impressum</title>
+    <title>Webshop | Home</title>
     <link rel="stylesheet" href="../CSS/main.css" />
 
     <style>
@@ -16,18 +16,19 @@
   </head>
   <body>
     <header>
-      <ul>
+      <nav>
         <div class="logo">
           <p>Logo</p>
         </div>
-        <div class="nav">
-          <a class="link link2 link3 top" href="autos.html">Rent</a>
-          <a class="link link2 link3 top" href="">Share</a>
-          <a class="link link2 link3 top" href="">Ride</a>
+        <div class="links">
+          <a class="link block top" href="autos.html">PH</a>
+          <a class="link block top" href="">PH</a>
+          <a class="link block top" href="">PH</a>
         </div>
-
-        <input class="search" type="text" placeholder="Search.." />
-      </ul>
+        <div class="searchBox">
+          <input class="search" type="text" placeholder="Search.." />
+        </div>
+      </nav>
     </header>
 
     <div>
