--- a/index.html
+++ b/index.html
@@ -1,67 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webshop | Home</title>
-    <link rel="stylesheet" href="../CSS/main.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <div class="logo">
-          <p>Logo</p>
-        </div>
-        <div class="links">
-          <a class="link block top" href="autos.html">PH</a>
-          <a class="link block top" href="">PH</a>
-          <a class="link block top" href="">PH</a>
-        </div>
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Webshop | Home</title>
+  <link rel="stylesheet" href="../CSS/main.css" />
+  <link rel="stylesheet" href="../CSS/dropdown.css" />
+</head>
+
+<body>
+  <header>
+    <nav>
+      <div class="links">
+        <a class="link block top" href="autos.html">PH</a>
+        <a class="link block top" href="">PH</a>
+        <a class="link block top" href="">PH</a>
+      </div>
+
+      <div class="more">
         <div class="searchBox">
           <input class="search" type="text" placeholder="Search.." />
-=======
-
-=======
-        <div class="searchBox">
-          <input class="search" type="text" placeholder="Search.." />
->>>>>>> Stashed changes
-        <div class="more">
-          <div class="searchBox">
-            <input class="search" type="text" placeholder="Search.." />
-          </div>
-          <div class="hamburger-menu">
-            <input id="menu__toggle" type="checkbox" />
-            <label class="menu__btn" for="menu__toggle">
-              <span></span>
-            </label>
-        
-            <ul class="menu__box">
-              <li><a class="menu__item" href="#">Home</a></li>
-              <li><a class="menu__item" href="#">About</a></li>
-              <li><a class="menu__item" href="#">Team</a></li>
-              <li><a class="menu__item" href="#">Contact</a></li>
-              <li><a class="menu__item" href="#">Twitter</a></li>
-            </ul>
-          </div>
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
         </div>
-      </nav>
-    </header>
 
-    <div>
-      <img
-        class="img"
-        src="../IMG/temp.jpeg"
-        width="500"
-        height="500"
-        alt="temp"
-      />
-    </div>
-  </body>
+        <div class="hamburger-menu">
+          <input id="menu__toggle" type="checkbox" />
+          <label class="menu__btn" for="menu__toggle">
+            <span></span>
+          </label>
+
+          <ul class="menu__box">
+            <li><a class="menu__item" href="#">Home</a></li>
+            <li><a class="menu__item" href="#">About</a></li>
+            <li><a class="menu__item" href="#">Team</a></li>
+            <li><a class="menu__item" href="#">Contact</a></li>
+            <li><a class="menu__item" href="#">Twitter</a></li>
+          </ul>
+
+        </div>
+
+      </div>
+    </nav>
+  </header>
+</body>
+
 </html>
