--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           <input class="search" type="text" placeholder="Search.." />
         </div>
 
-        <div class="hamburger-menu">
-          <input id="menu__toggle" type="checkbox" />
-          <label class="menu__btn" for="menu__toggle">
-            <span></span>
-          </label>
+        <div>
+          <input id="menu__toggle" type="checkbox">
+            <label class="menu__btn" for="menu__toggle">
+              <span></span>
+            </label>
 
           <ul class="menu__box">
             <li><a class="menu__item" href="#">Home</a></li>
