--- a/index.html
+++ b/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Webshop | Home</title>
+    <link rel="stylesheet" href="../CSS/main.css" />
+    <link rel="stylesheet" href="../CSS/dropdown.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Webshop | Home</title>
-  <link rel="stylesheet" href="../CSS/main.css" />
-  <link rel="stylesheet" href="../CSS/dropdown.css" />
-</head>
-
-<body>
-  <header>
-    <nav>
-      <div class="links">
-        <a class="link block top" href="autos.html">PH</a>
-        <a class="link block top" href="">PH</a>
-        <a class="link block top" href="">PH</a>
-      </div>
-
-      <div class="more">
-        <div class="searchBox">
-          <input class="search" type="text" placeholder="Search.." />
+  <body>
+    <header>
+      <nav>
+        <div class="links">
+          <a class="link block top" href="autos.html">PH</a>
+          <a class="link block top" href="">PH</a>
+          <a class="link block top" href="">PH</a>
         </div>
 
-        <div>
-          <input id="menu__toggle" type="checkbox">
+        <div class="more">
+          <div class="searchBox">
+            <input class="search" type="text" placeholder="Search.." />
+          </div>
+
+          <div class="burger">
+            <input id="menu__toggle" type="checkbox" />
             <label class="menu__btn" for="menu__toggle">
               <span></span>
             </label>
 
-          <ul class="menu__box">
-            <li><a class="menu__item" href="#">Home</a></li>
-            <li><a class="menu__item" href="#">About</a></li>
-            <li><a class="menu__item" href="#">Team</a></li>
-            <li><a class="menu__item" href="#">Contact</a></li>
-            <li><a class="menu__item" href="#">Twitter</a></li>
-          </ul>
-
+            <ul class="menu__box">
+              <li><a class="menu__item" href="#">Home</a></li>
+              <li><a class="menu__item" href="#">About</a></li>
+              <li><a class="menu__item" href="#">Team</a></li>
+              <li><a class="menu__item" href="#">Contact</a></li>
+              <li><a class="menu__item" href="#">Twitter</a></li>
+            </ul>
+          </div>
         </div>
-
-      </div>
-    </nav>
-  </header>
-</body>
-
+      </nav>
+    </header>
+  </body>
 </html>
