logo ph added back

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <header>
       <nav>
+        <div class="logo">Logo</div>
         <div class="links">
           <a class="link block top" href="autos.html">PH</a>
           <a class="link block top" href="">PH</a>
