--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Webshop | Home</title>
     <link rel="stylesheet" href="../CSS/main.css" />
     <link rel="stylesheet" href="../CSS/dropdown.css" />
+    <link rel="stylesheet" href="../CSS/links-sublinks.css" />
   </head>
 
   <body>
@@ -14,9 +15,35 @@
       <nav>
         <div class="logo">Logo</div>
         <div class="links">
-          <a class="link block top" href="autos.html">PH</a>
-          <a class="link block top" href="">PH</a>
-          <a class="link block top" href="">PH</a>
+          <a id="phones" class="link block top" href="">Phones</a>
+
+          <ul id="sublink-phones">
+            <li><a class="sublink_item" href="#">Phone1</a></li>
+            <li><a class="sublink_item" href="#">Phone2</a></li>
+            <li><a class="sublink_item" href="#">Phone3</a></li>
+            <li><a class="sublink_item" href="#">Phone4</a></li>
+            <li><a class="sublink_item" href="#">Phone5</a></li>
+          </ul>
+
+          <a id="laptops" class="link block top" href="">Laptops</a>
+
+          <ul id="sublink-laptops">
+            <li><a class="sublink_item" href="#">Laptop1</a></li>
+            <li><a class="sublink_item" href="#">Laptop2</a></li>
+            <li><a class="sublink_item" href="#">Laptop3</a></li>
+            <li><a class="sublink_item" href="#">Laptop4</a></li>
+            <li><a class="sublink_item" href="#">Laptop5</a></li>
+          </ul>
+
+          <a id="tablets" class="link block top" href="">Tablets</a>
+
+          <ul id="sublink-tablets">
+            <li><a class="sublink_item" href="#">Tablet1</a></li>
+            <li><a class="sublink_item" href="#">Tablet2</a></li>
+            <li><a class="sublink_item" href="#">Tablet3</a></li>
+            <li><a class="sublink_item" href="#">Tablet4</a></li>
+            <li><a class="sublink_item" href="#">Tablet5</a></li>
+          </ul>
         </div>
 
         <div class="more">
@@ -35,7 +62,7 @@
               <li><a class="menu__item" href="#">About</a></li>
               <li><a class="menu__item" href="#">Team</a></li>
               <li><a class="menu__item" href="#">Contact</a></li>
-              <li><a class="menu__item" href="#">Twitter</a></li>
+              <li><a class="menu__item" href="#">Help</a></li>
             </ul>
           </div>
         </div>
