--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
             </label>
 
             <ul class="menu__box">
+              <div class = "account">
+                <img class="account" src="IMG/temp.jpeg">
+                <li><a class="menu__item" href="#">Stefan</a></li>
+              </div>
+              
               <li><a class="menu__item" href="#">Home</a></li>
               <li><a class="menu__item" href="#">About</a></li>
               <li><a class="menu__item" href="#">Team</a></li>
