Login Added, Color scheme reworked, other small changes

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webshop | Home</title>
+    <title>Webshop | About</title>
     <link rel="stylesheet" href="../CSS/main.css" />
     <link rel="stylesheet" href="../CSS/dropdown.css" />
     <link rel="stylesheet" href="../CSS/links-sublinks.css" />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
   </head>
 
   <body>
@@ -60,21 +56,28 @@
             <label class="menu__btn" for="menu__toggle">
               <span></span>
             </label>
+
             <ul class="menu__box">
               <div class = "account">
-                <img class="account_img" src="IMG/account.png">
-                <li><a href="HTML/login.html" class="account_item">Login</a></li>
+                <img class="account_img" src="../IMG/account.png">
+                <li><a href="login.html" class="account_item">Login</a></li>
               </div>
               
-              <li><a class="menu__item" href="">Home</a></li>
-              <li><a class="menu__item" href="">Shopping Cart <i class="far fa-shopping-cart"></i></a></li>
-              <li><a class="menu__item" href="HTML/about.html">About</a></li>
+              <li><a class="menu__item" href="../index.html">Home</a></li>
+              <li><a class="menu__item" href="">Shopping Cart</a></li>
+              <li><a class="menu__item" href="#">About</a></li>
               <li><a class="menu__item" href="#">Contact</a></li>
               <li><a class="menu__item" href="#">Help</a></li>
             </ul>
           </div>
         </div>
       </nav>
+      <h1>Willkommen auf unserer Tech-Verkauf Website!</h1>
+    <p>Wir sind stolz darauf, Ihnen hochwertige technologische Produkte und Lösungen anzubieten, die Ihnen helfen, Ihre Arbeit und Ihr Leben einfacher, effizienter und unterhaltsamer zu gestalten.</p>
+    <p>Unsere Website wurde von einem Team von Technologie-Enthusiasten erstellt, die ihre Leidenschaft für Innovation und Kreativität in die Tat umsetzen wollten. Samuel, Stefan und Eric haben ihre Kräfte vereint, um eine Plattform zu schaffen, auf der Sie die neuesten und besten Technologien finden können, die auf dem Markt erhältlich sind.</p>
+    <p>Unser Ziel ist es, Ihnen ein nahtloses Einkaufserlebnis zu bieten, bei dem Sie sich sicher fühlen können, dass Sie die besten Produkte zu den besten Preisen erhalten. Wir haben eine umfangreiche Auswahl an Produkten, darunter Smartphones, Tablets, Laptops, Kameras, Zubehör und vieles mehr. Unser Sortiment umfasst sowohl beliebte Marken als auch innovative Startups, um sicherzustellen, dass Sie immer eine breite Palette an Optionen haben.</p>
+    <p>Unser Team von Experten ist stets bemüht, Ihnen die bestmögliche Beratung und Unterstützung zu bieten. Wenn Sie Fragen haben oder Hilfe benötigen, stehen wir Ihnen gerne zur Verfügung. Unser Kundenservice ist erstklassig und wir sind stolz darauf, unseren Kunden ein erstklassiges Einkaufserlebnis zu bieten.</p>
+    <p>Vielen Dank, dass Sie unsere Tech-Verkauf Website besuchen. Wir hoffen, dass Sie das perfekte Produkt für Ihre Bedürfnisse finden und dass Sie von unserer Website beeindruckt sind. Wir werden immer bestrebt sein, unsere Website zu verbessern und zu aktualisieren, um sicherzustellen, dass Sie stets die besten und innovativsten Technologien finden können.</p>
     </header>
   </body>
 </html>
