--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
   </head>
+
   <body>
     <header>
       <nav>
@@ -66,12 +67,12 @@
               </div>
               
               <li><a class="menu__item" href="">Home</a></li>
-              <li><a class="menu__item" href="">Shopping Cart <i class="fa-solid fa-cart-shopping"></i></a> </li>
+              <li><a class="menu__item" href="">Shopping Cart <i class="far fa-shopping-cart"></i></a></li>
               <li><a class="menu__item" href="HTML/about.html">About</a></li>
               <li><a class="menu__item" href="#">Contact</a></li>
               <li><a class="menu__item" href="#">Help</a></li>
             </ul>
-          </div>  
+          </div>
         </div>
       </nav>
     </header>
