alles kapput eig

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
               </div>
               
               <li><a class="menu__item" href="">Home</a></li>
-              <li><a class="menu__item" href="">Shopping Cart <i class="far fa-shopping-cart"></i></a></li>
+              <li><a class="menu__item" href="">Shopping Cart <i class="fa-solid fa-cart-shopping"></i
+                ></a></li>
               <li><a class="menu__item" href="HTML/about.html">About</a></li>
               <li><a class="menu__item" href="#">Contact</a></li>
               <li><a class="menu__item" href="#">Help</a></li>
