about page + pp bg removed

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -82,5 +82,40 @@
         </div>
       </nav>
     </header>
+    <div class="aboutContent">
+      <div class="aboutText">
+        <h1>Welcome to Electronic Store</h1>
+        <p>
+          At [NAME] store, we offer a wide selection of top-quality electronic.
+        </p>
+        <p>
+          Our team of experts is committed to providing you with the latest and
+          most innovative technology at competitive prices. Whether you are a
+          student, a professional, or simply looking for the latest gadget, we
+          have everything you need to stay connected and productive.
+        </p>
+        <p>
+          At [NAME], we understand that electronic devices are an essential part
+          of your daily life. That's why we source only the best brands and
+          products that meet our rigorous standards for quality, performance,
+          and reliability. We strive to offer a range of products that cater to
+          different needs and budgets, so you can find the perfect device that
+          fits your lifestyle.
+        </p>
+        <p>
+          Our user-friendly website makes it easy for you to browse and compare
+          products, read reviews, and make an informed decision before making a
+          purchase. We also offer fast and reliable shipping options to ensure
+          that your order arrives at your doorstep in a timely manner.
+        </p>
+        <p>
+          We take pride in our exceptional customer service, and our dedicated
+          team is always ready to answer any questions or concerns you may have.
+          So, whether you are looking for a new smartphone, a powerful laptop,
+          or a versatile tablet, you can trust us to provide you with the best
+          shopping experience and top-quality products.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
