dropdown scroll support added

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -84,10 +84,8 @@
     </header>
     <div class="aboutContent">
       <div class="aboutText">
-        <h1>Welcome to Electronic Store</h1>
-        <p>
-          At [NAME] store, we offer a wide selection of top-quality electronic.
-        </p>
+        <h1>Welcome to [NAME]</h1>
+        <p>At [NAME], we offer a wide selection of top-quality electronic.</p>
         <p>
           Our team of experts is committed to providing you with the latest and
           most innovative technology at competitive prices. Whether you are a
