--- a/HTML/about.html
+++ b/HTML/about.html
@@ -64,7 +64,7 @@
               <div class="account">
                 <img class="account_img" src="../IMG/account.png" />
                 <li>
-                  <a href="HTML/login.html" class="account_item">Login</a>
+                  <a href="login.html" class="account_item block">Login</a>
                 </li>
               </div>
 
