--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="../CSS/dropdown.css" />
     <link rel="stylesheet" href="../CSS/links-sublinks.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
   </head>
 
@@ -61,14 +61,19 @@
               <span></span>
             </label>
             <ul class="menu__box">
-              <div class = "account">
-                <img class="account_img" src="IMG/account.png">
-                <li><a href="HTML/login.html" class="account_item">Login</a></li>
+              <div class="account">
+                <img class="account_img" src="IMG/account.png" />
+                <li>
+                  <a href="HTML/login.html" class="account_item block">Login</a>
+                </li>
               </div>
-              
+
               <li><a class="menu__item" href="">Home</a></li>
-              <li><a class="menu__item" href="">Shopping Cart <i class="fa-solid fa-cart-shopping"></i
-                ></a></li>
+              <li>
+                <a class="menu__item" href=""
+                  >Shopping Cart <i class="fa-solid fa-cart-shopping"></i
+                ></a>
+              </li>
               <li><a class="menu__item" href="HTML/about.html">About</a></li>
               <li><a class="menu__item" href="#">Contact</a></li>
               <li><a class="menu__item" href="#">Help</a></li>
