banner + laptop angebote

--- a/index.html
+++ b/index.html
@@ -82,5 +82,9 @@
         </div>
       </nav>
     </header>
+    <div class="banner">
+      <img class="bannerImage" src="img/banner1.jpg" alt="Apple Products" />
+    </div>
+    <div class="angeboteContent">Die neuesten Laptops</div>
   </body>
 </html>
