added more sites

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -26,7 +26,7 @@
         <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
       </div>
 
-      <a href="../index.html" class="back">Back</a>
+      <a href="../index.html" class="back">Home</a>
 
     </main>
   </body>
