--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webshop | About</title>
+    <title>Webshop | Shopping Cart</title>
     <link rel="stylesheet" href="../CSS/main.css" />
     <link rel="stylesheet" href="../CSS/dropdown.css" />
     <link rel="stylesheet" href="../CSS/links-sublinks.css" />
+    <link rel="stylesheet" href="../CSS/shoppingCart.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -70,50 +71,34 @@
 
               <li><a class="menu__item" href="../index.html">Home</a></li>
               <li>
-                <a class="menu__item" href="shoppingCart.html"
+                <a class="menu__item" href="HTML/shoppingCart.html"
                 >Shopping Cart <i class="fa-solid fa-cart-shopping"></i
               ></a>
             </li>
             <li><a class="menu__item" href="about.html">About</a></li>
-            <li><a class="menu__item" href="contact.html">Contact</a></li>
             <li><a class="menu__item" href="help.html">Help</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <div class="aboutContent">
-      <div class="aboutText">
-        <h1>Welcome to [NAME]</h1>
-        <p>At [NAME], we offer a wide selection of top-quality electronic.</p>
-        <p>
-          Our team of experts is committed to providing you with the latest and
-          most innovative technology at competitive prices. Whether you are a
-          student, a professional, or simply looking for the latest gadget, we
-          have everything you need to stay connected and productive.
-        </p>
-        <p>
-          At [NAME], we understand that electronic devices are an essential part
-          of your daily life. That's why we source only the best brands and
-          products that meet our rigorous standards for quality, performance,
-          and reliability. We strive to offer a range of products that cater to
-          different needs and budgets, so you can find the perfect device that
-          fits your lifestyle.
-        </p>
-        <p>
-          Our user-friendly website makes it easy for you to browse and compare
-          products, read reviews, and make an informed decision before making a
-          purchase. We also offer fast and reliable shipping options to ensure
-          that your order arrives at your doorstep in a timely manner.
-        </p>
-        <p>
-          We take pride in our exceptional customer service, and our dedicated
-          team is always ready to answer any questions or concerns you may have.
-          So, whether you are looking for a new smartphone, a powerful laptop,
-          or a versatile tablet, you can trust us to provide you with the best
-          shopping experience and top-quality products.
-        </p>
-        <a class="button block top" href="../index.html">Back</a> 
+    <div class="box">
+      <h1>Your shopping Cart</h1>
+      <div class="itemHolder">
+        <div class="items">
+          <div>
+            <img src="../IMG/temp.jpeg" width="500" height="400">
+          </div>
+        </div>
+        <div class="checkout">
+          <h2>Checkout</h2>
+          <p>
+            <b>Total: 2998$</b>
+            <br>
+            IPhone: 799$
+          </p>
+          <a class="checkoutButton block top" href="../index.html">Back</a> 
+        </div>
       </div>
     </div>
   </body>
