--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webshop | Home</title>
-    <link rel="stylesheet" href="../CSS/main.css" />
-    <link rel="stylesheet" href="../CSS/dropdown.css" />
-    <link rel="stylesheet" href="../CSS/links-sublinks.css" />
+    <link rel="stylesheet" href="CSS/main.css" />
+    <link rel="stylesheet" href="CSS/dropdown.css" />
+    <link rel="stylesheet" href="CSS/links-sublinks.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -68,15 +68,14 @@
                 </li>
               </div>
 
-              <li><a class="menu__item" href="">Home</a></li>
+              <li><a class="menu__item" href="index.html">Home</a></li>
               <li>
-                <a class="menu__item" href=""
+                <a class="menu__item" href="HTML/shoppingCart.html"
                   >Shopping Cart <i class="fa-solid fa-cart-shopping"></i
                 ></a>
               </li>
               <li><a class="menu__item" href="HTML/about.html">About</a></li>
-              <li><a class="menu__item" href="#">Contact</a></li>
-              <li><a class="menu__item" href="#">Help</a></li>
+              <li><a class="menu__item" href="HTML/help.html">Help</a></li>
             </ul>
           </div>
         </div>
