--- a/HTML/help.html
+++ b/HTML/help.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webshop | About</title>
+    <title>Webshop | Help</title>
     <link rel="stylesheet" href="../CSS/main.css" />
     <link rel="stylesheet" href="../CSS/dropdown.css" />
     <link rel="stylesheet" href="../CSS/links-sublinks.css" />
@@ -75,46 +75,31 @@
               ></a>
             </li>
             <li><a class="menu__item" href="about.html">About</a></li>
-            <li><a class="menu__item" href="contact.html">Contact</a></li>
             <li><a class="menu__item" href="help.html">Help</a></li>
             </ul>
           </div>
         </div>
       </nav>
-    </header>
-    <div class="aboutContent">
-      <div class="aboutText">
-        <h1>Welcome to [NAME]</h1>
-        <p>At [NAME], we offer a wide selection of top-quality electronic.</p>
-        <p>
-          Our team of experts is committed to providing you with the latest and
-          most innovative technology at competitive prices. Whether you are a
-          student, a professional, or simply looking for the latest gadget, we
-          have everything you need to stay connected and productive.
-        </p>
-        <p>
-          At [NAME], we understand that electronic devices are an essential part
-          of your daily life. That's why we source only the best brands and
-          products that meet our rigorous standards for quality, performance,
-          and reliability. We strive to offer a range of products that cater to
-          different needs and budgets, so you can find the perfect device that
-          fits your lifestyle.
-        </p>
-        <p>
-          Our user-friendly website makes it easy for you to browse and compare
-          products, read reviews, and make an informed decision before making a
-          purchase. We also offer fast and reliable shipping options to ensure
-          that your order arrives at your doorstep in a timely manner.
-        </p>
-        <p>
-          We take pride in our exceptional customer service, and our dedicated
-          team is always ready to answer any questions or concerns you may have.
-          So, whether you are looking for a new smartphone, a powerful laptop,
-          or a versatile tablet, you can trust us to provide you with the best
-          shopping experience and top-quality products.
-        </p>
-        <a class="button block top" href="../index.html">Back</a> 
-      </div>
-    </div>
+        <div class="aboutContent">
+          <div class="aboutText">
+            <h1>Help:</h1>
+            <p>
+              Magni suscipit doloremque commodi. Consequatur dolores qui quo voluptatibus. Dolorem maiores sunt aut fuga. Earum quia quidem quis tempore. Nisi quibusdam voluptas qui velit nostrum nostrum aspernatur natus.
+            </p>
+            <p>
+              Optio reprehenderit qui aut expedita aliquam laborum. Aut eveniet facilis commodi rerum enim quae incidunt. Et labore sunt aut quia libero sapiente. Voluptatibus enim magni et est voluptatem ipsam. Unde alias et eum sint.
+            </p>
+            <p>
+              Et similique sit assumenda expedita debitis iure quia. Ducimus voluptatibus esse maiores voluptatibus voluptatem sit aperiam. Hic possimus consequatur atque eveniet molestias. Quo sapiente repellat suscipit deserunt.
+            </p>
+            <p>
+              In quasi officiis voluptate libero minus magnam et fugit. Qui sequi rem dicta saepe molestias et. Provident voluptatem fugiat est. Dolorum corrupti aliquam perferendis eos assumenda. Impedit dicta quia perferendis et suscipit. Dolorem esse delectus autem.
+            </p>
+            <p>
+              Nemo culpa dignissimos earum excepturi. Odit sequi voluptatum eos qui tenetur doloribus. Nemo aut saepe soluta minus.
+            </p>
+            <a class="button block top" href="../index.html">Home</a>
+          </div> 
+        </div>
   </body>
 </html>
