--- a/HTML/about.html
+++ b/HTML/about.html
@@ -113,7 +113,7 @@
           or a versatile tablet, you can trust us to provide you with the best
           shopping experience and top-quality products.
         </p>
-        <a class="button block top" href="../index.html">Back</a> 
+        <a class="button block top" href="../index.html">Home</a> 
       </div>
     </div>
   </body>
