--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -86,18 +86,33 @@
       <h1>Your shopping Cart</h1>
       <div class="itemHolder">
         <div class="items">
-          <div>
-            <img src="../IMG/temp.jpeg" width="500" height="400">
+          <div class="item">
+            <img src="../IMG/temp.jpeg" width="400" height="300">
+            <p>
+              <b>IPhone 12 - 799$</b>
+              <br>
+              The iPhone 12 is a flagship smartphone from Apple, featuring a 6.1-inch Super Retina XDR display, A14 Bionic chip, iOS 14, and a dual-camera system. 
+              It's built to withstand daily use with Ceramic Shield front cover and is water and dust resistant with an IP68 rating. It's perfect for those looking for a powerful and stylish smartphone experience.
+            </p>
+          </div>
+          <div class="item">
+            <img src="../IMG/temp.jpeg" width="400" height="300">
+            <p>
+              <b>IPhone 12 - 799$</b>
+              <br>
+              The iPhone 12 is a flagship smartphone from Apple, featuring a 6.1-inch Super Retina XDR display, A14 Bionic chip, iOS 14, and a dual-camera system. 
+              It's built to withstand daily use with Ceramic Shield front cover and is water and dust resistant with an IP68 rating. It's perfect for those looking for a powerful and stylish smartphone experience.
+            </p>
           </div>
         </div>
         <div class="checkout">
-          <h2>Checkout</h2>
+          <h1>Checkout</h1>
           <p>
             <b>Total: 2998$</b>
             <br>
             IPhone: 799$
           </p>
-          <a class="checkoutButton block top" href="../index.html">Back</a> 
+          <a class="checkoutButton block top" href="../index.html">Buy now</a> 
         </div>
       </div>
     </div>
