--- a/HTML/help.html
+++ b/HTML/help.html
@@ -84,19 +84,37 @@
           <div class="aboutText">
             <h1>Help:</h1>
             <p>
-              Magni suscipit doloremque commodi. Consequatur dolores qui quo voluptatibus. Dolorem maiores sunt aut fuga. Earum quia quidem quis tempore. Nisi quibusdam voluptas qui velit nostrum nostrum aspernatur natus.
-            </p>
-            <p>
-              Optio reprehenderit qui aut expedita aliquam laborum. Aut eveniet facilis commodi rerum enim quae incidunt. Et labore sunt aut quia libero sapiente. Voluptatibus enim magni et est voluptatem ipsam. Unde alias et eum sint.
-            </p>
-            <p>
-              Et similique sit assumenda expedita debitis iure quia. Ducimus voluptatibus esse maiores voluptatibus voluptatem sit aperiam. Hic possimus consequatur atque eveniet molestias. Quo sapiente repellat suscipit deserunt.
-            </p>
-            <p>
-              In quasi officiis voluptate libero minus magnam et fugit. Qui sequi rem dicta saepe molestias et. Provident voluptatem fugiat est. Dolorum corrupti aliquam perferendis eos assumenda. Impedit dicta quia perferendis et suscipit. Dolorem esse delectus autem.
-            </p>
-            <p>
-              Nemo culpa dignissimos earum excepturi. Odit sequi voluptatum eos qui tenetur doloribus. Nemo aut saepe soluta minus.
+              <b>Product Information:</b>
+              <br>>
+              We strive to provide accurate and up-to-date information about all of our products. If you have any questions about a specific item, please contact us and we will do our best to provide you with the information you need.
+              <br>
+              <br>
+              <b>Ordering Process:</b>
+              <br>
+              To place an order, simply add the items you wish to purchase to your cart and proceed to checkout. You will be prompted to enter your billing and shipping information before submitting your order. 
+              Once your order has been submitted, you will receive an email confirmation with your order details.      
+              <br>
+              <br>     
+              <b>Payment Options:</b>
+              <br>
+              We accept a variety of payment options, including credit and debit cards, PayPal, and other online payment methods. If you have any questions about payment options, please contact us.
+              <br>
+              <br>
+              <b>Shipping:</b>
+              <br>
+              We offer a variety of shipping options, including standard, expedited, and overnight shipping. Shipping fees are based on the weight and size of your order and your location. Once your order has shipped, you will receive a tracking number via email.
+              <br>
+              <br>
+              <b>Returns and Refunds:</b>
+              <br>
+              We want you to be completely satisfied with your purchase. If for any reason you are not satisfied, we offer a 30-day return policy. Please contact us for return instructions. Refunds will be issued once the item has been received and inspected.
+              <br>
+              <br>
+              <b>Customer Service:</b>
+              <br>
+              We are dedicated to providing excellent customer service. If you have any questions or concerns, please contact us via phone or email. Our customer service team is available during business hours to assist you.
+              <br>
+              Thank you for choosing our technology webshop! We appreciate your business and look forward to serving you.
             </p>
             <a class="button block top" href="../index.html">Home</a>
           </div> 
