--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -71,7 +71,7 @@
 
               <li><a class="menu__item" href="../index.html">Home</a></li>
               <li>
-                <a class="menu__item" href="HTML/shoppingCart.html"
+                <a class="menu__item" href="shoppingCart.html"
                 >Shopping Cart <i class="fa-solid fa-cart-shopping"></i
               ></a>
             </li>
