--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -83,26 +83,17 @@
       </nav>
     </header>
     <div class="box">
-      <h1>Your shopping Cart</h1>
       <div class="itemHolder">
         <div class="items">
+          <div class="item title"><h2>MY SHOPPING CART</h2></div>
           <div class="item">
-            <img src="../IMG/temp.jpeg" width="400" height="300">
-            <p>
-              <b>IPhone 12 - 799$</b>
-              <br>
-              The iPhone 12 is a flagship smartphone from Apple, featuring a 6.1-inch Super Retina XDR display, A14 Bionic chip, iOS 14, and a dual-camera system. 
-              It's built to withstand daily use with Ceramic Shield front cover and is water and dust resistant with an IP68 rating. It's perfect for those looking for a powerful and stylish smartphone experience.
-            </p>
+              item in cart
           </div>
           <div class="item">
-            <img src="../IMG/temp.jpeg" width="400" height="300">
-            <p>
-              <b>IPhone 12 - 799$</b>
-              <br>
-              The iPhone 12 is a flagship smartphone from Apple, featuring a 6.1-inch Super Retina XDR display, A14 Bionic chip, iOS 14, and a dual-camera system. 
-              It's built to withstand daily use with Ceramic Shield front cover and is water and dust resistant with an IP68 rating. It's perfect for those looking for a powerful and stylish smartphone experience.
-            </p>
+            item in cart
+          </div>
+          <div class="item cartBanner">
+            footer oder so ka
           </div>
         </div>
         <div class="checkout">
