--- a/HTML/login.html
+++ b/HTML/login.html
@@ -25,8 +25,10 @@
       <div id="login-error-msg-holder">
         <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
       </div>
-
-      <a href="../index.html" class="back">Home</a>
+      <div>
+        <a href="../index.html" class="back">Home</a>
+      <a href="../index.html" class="back">Register</a>
+      </div>
 
     </main>
   </body>
