--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -59,6 +59,8 @@
               <li class="searchItem">ABC</li>
               <li class="searchItem">123</li>
               <li class="searchItem">LMNOP</li>
+              <li class="searchItem">neger</li>
+              <li class="searchItem">eric</li>
             </ol>
           </div>
 
