search bar updated

--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -54,13 +54,11 @@
 
         <div class="more">
           <div class="searchBox">
-            <input id="search"onkeyup="search_item()"  type="text" placeholder="Search.." />
+            <input id="search"onkeyup="search_item()" type="text" placeholder="Search.." />
             <ol id='list'>
               <li class="searchItem">ABC</li>
               <li class="searchItem">123</li>
-              <li class="searchItem">LMNOP</li>
-              <li class="searchItem">neger</li>
-              <li class="searchItem">eric</li>
+              <li class="searchItem">Wifi Pineapple Mark VII</li>
             </ol>
           </div>
 
