--- a/HTML/help.html
+++ b/HTML/help.html
@@ -52,7 +52,12 @@
 
         <div class="more">
           <div class="searchBox">
-            <input class="search" type="text" placeholder="Search.." />
+            <input id="search"onkeyup="search_item()" type="text" placeholder="Search.." />
+            <ol id='list'>
+              <li class="searchItem">ABC</li>
+              <li class="searchItem">123</li>
+              <li class="searchItem">Wifi Pineapple Mark VII</li>
+            </ol>
           </div>
 
           <div class="burger">
