Struktur von Scrollen bei Handys

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="CSS\scrolling.css">
   </head>
 
   <body>
@@ -22,31 +23,31 @@
           <a id="phones" class="link block top" href="">Phones</a>
 
           <ul id="sublink-phones">
-            <li><a class="sublink_item" href="#">Phone1</a></li>
-            <li><a class="sublink_item" href="#">Phone2</a></li>
-            <li><a class="sublink_item" href="#">Phone3</a></li>
-            <li><a class="sublink_item" href="#">Phone4</a></li>
-            <li><a class="sublink_item" href="#">Phone5</a></li>
+            <li><a class="sublink_item" href="#phone1">Phone1</a></li>
+            <li><a class="sublink_item" href="#phone2">Phone2</a></li>
+            <li><a class="sublink_item" href="phone3">Phone3</a></li>
+            <li><a class="sublink_item" href="phone4">Phone4</a></li>
+            <li><a class="sublink_item" href="phone5">Phone5</a></li>
           </ul>
 
           <a id="laptops" class="link block top" href="">Laptops</a>
 
           <ul id="sublink-laptops">
-            <li><a class="sublink_item" href="#">Laptop1</a></li>
-            <li><a class="sublink_item" href="#">Laptop2</a></li>
-            <li><a class="sublink_item" href="#">Laptop3</a></li>
-            <li><a class="sublink_item" href="#">Laptop4</a></li>
-            <li><a class="sublink_item" href="#">Laptop5</a></li>
+            <li><a class="sublink_item" href="laptop1">Laptop1</a></li>
+            <li><a class="sublink_item" href="laptop2">Laptop2</a></li>
+            <li><a class="sublink_item" href="laptop3">Laptop3</a></li>
+            <li><a class="sublink_item" href="laptop4">Laptop4</a></li>
+            <li><a class="sublink_item" href="laptop5">Laptop5</a></li>
           </ul>
 
           <a id="tablets" class="link block top" href="">Tablets</a>
 
           <ul id="sublink-tablets">
-            <li><a class="sublink_item" href="#">Tablet1</a></li>
-            <li><a class="sublink_item" href="#">Tablet2</a></li>
-            <li><a class="sublink_item" href="#">Tablet3</a></li>
-            <li><a class="sublink_item" href="#">Tablet4</a></li>
-            <li><a class="sublink_item" href="#">Tablet5</a></li>
+            <li><a class="sublink_item" href="tablet1">Tablet1</a></li>
+            <li><a class="sublink_item" href="tablet2">Tablet2</a></li>
+            <li><a class="sublink_item" href="tablet3">Tablet3</a></li>
+            <li><a class="sublink_item" href="tablet4">Tablet4</a></li>
+            <li><a class="sublink_item" href="tablet5">Tablet5</a></li>
           </ul>
         </div>
 
@@ -90,5 +91,21 @@
       <img class="bannerImage" src="img/banner1.jpg" alt="Apple Products" />
     </div>
     <div class="angeboteContent">Die neuesten Laptops</div>
+
+    <div id="phone1">1</div>
+    <div id="phone2">2</div>
+    <div id="phone3">3</div>
+    <div id="phone4">4</div>
+    <div id="phone5">5</div>
+    <div id="laptop1">6</div>
+    <div id="laptop2">7</div>
+    <div id="laptop3">8</div>
+    <div id="laptop4">9</div>
+    <div id="laptop5">10</div>
+    <div id="tablet1">11</div>
+    <div id="tablet2">12</div>
+    <div id="tablet3">13</div>
+    <div id="tablet4">14</div>
+    <div id="tablet5">15</div>
   </body>
 </html>
