phones laptops und tablets seiten erstellt (nicht fertig)

--- a/HTML/laptops.html
+++ b/HTML/laptops.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webshop | Home</title>
-    <link rel="stylesheet" href="CSS/main.css" />
-    <link rel="stylesheet" href="CSS/dropdown.css" />
-    <link rel="stylesheet" href="CSS/links-sublinks.css" />
+    <link rel="stylesheet" href="../CSS/main.css" />
+    <link rel="stylesheet" href="../CSS/dropdown.css" />
+    <link rel="stylesheet" href="../CSS/links-sublinks.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -20,7 +20,7 @@
       <nav>
         <div class="logo">logo</div>
         <div class="links">
-          <a id="phones" class="link block top" href="HTML/phones.html">Phones</a>
+          <a id="phones" class="link block top" href="">Phones</a>
 
           <ul id="sublink-phones">
             <li><a class="sublink_item" href="#phone1">Phone1</a></li>
@@ -30,24 +30,24 @@
             <li><a class="sublink_item" href="#phone5">Phone5</a></li>
           </ul>
 
-          <a id="laptops" class="link block top" href="HTML/laptops.html">Laptops</a>
+          <a id="laptops" class="link block top" href="">Laptops</a>
 
           <ul id="sublink-laptops">
-            <li><a class="sublink_item" href="laptop1">Laptop1</a></li>
-            <li><a class="sublink_item" href="laptop2">Laptop2</a></li>
-            <li><a class="sublink_item" href="laptop3">Laptop3</a></li>
-            <li><a class="sublink_item" href="laptop4">Laptop4</a></li>
-            <li><a class="sublink_item" href="laptop5">Laptop5</a></li>
+            <li><a class="sublink_item" href="#laptop1">Laptop1</a></li>
+            <li><a class="sublink_item" href="#laptop2">Laptop2</a></li>
+            <li><a class="sublink_item" href="#laptop3">Laptop3</a></li>
+            <li><a class="sublink_item" href="#laptop4">Laptop4</a></li>
+            <li><a class="sublink_item" href="#laptop5">Laptop5</a></li>
           </ul>
 
-          <a id="tablets" class="link block top" href="HTML/tablets.html">Tablets</a>
+          <a id="tablets" class="link block top" href="">Tablets</a>
 
           <ul id="sublink-tablets">
-            <li><a class="sublink_item" href="tablet1">Tablet1</a></li>
-            <li><a class="sublink_item" href="tablet2">Tablet2</a></li>
-            <li><a class="sublink_item" href="tablet3">Tablet3</a></li>
-            <li><a class="sublink_item" href="tablet4">Tablet4</a></li>
-            <li><a class="sublink_item" href="tablet5">Tablet5</a></li>
+            <li><a class="sublink_item" href="#tablet1">Tablet1</a></li>
+            <li><a class="sublink_item" href="#tablet2">Tablet2</a></li>
+            <li><a class="sublink_item" href="#tablet3">Tablet3</a></li>
+            <li><a class="sublink_item" href="#tablet4">Tablet4</a></li>
+            <li><a class="sublink_item" href="#tablet5">Tablet5</a></li>
           </ul>
         </div>
 
@@ -74,7 +74,7 @@
                 </li>
               </div>
 
-              <li><a class="menu__item" href="index.html">Home</a></li>
+              <li><a class="menu__item" href="../index.html">Home</a></li>
               <li>
                 <a class="menu__item" href="HTML/shoppingCart.html"
                   >Shopping Cart <i class="fa-solid fa-cart-shopping"></i
@@ -87,9 +87,12 @@
         </div>
       </nav>
     </header>
-    <div class="banner">
-      <img class="bannerImage" src="img/banner1.jpg" alt="Apple Products" />
-    </div>
-    <div class="angeboteContent">Die neuesten Laptops</div>
-  </body>
-</html>
+    <body>
+      <div class="things">
+        <div class="thing1"> <div>a</div><div>b</div><div>c</div></div>
+        <div class="thing1"> <div>a</div> <div>b</div> <div>c</div></div>
+        <div class="thing1"> <div>a</div><div>b</div><div>c</div></div>
+        <div class="thing1"><div>a</div><div>b</div><div>c</div></div>
+        <div class="thing1"><div>a</div><div>b</div><div>c</div></div>
+      </div>
+    </body>
