--- a/HTML/phones.html
+++ b/HTML/phones.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webshop | Home</title>
-    <link rel="stylesheet" href="CSS/main.css" />
-    <link rel="stylesheet" href="CSS/dropdown.css" />
-    <link rel="stylesheet" href="CSS/links-sublinks.css" />
+    <link rel="stylesheet" href="../CSS/main.css" />
+    <link rel="stylesheet" href="../CSS/dropdown.css" />
+    <link rel="stylesheet" href="../CSS/links-sublinks.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="CSS\scrolling.css">
+    <link rel="stylesheet" href="CSS\scrolling.css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
       <nav>
         <div class="logo">logo</div>
         <div class="links">
-          <a id="phones" class="link block top" href="HTML/phones.html">Phones</a>
+          <a id="phones" class="link block top" href="">Phones</a>
 
           <ul id="sublink-phones">
             <li><a class="sublink_item" href="#phone1">Phone1</a></li>
@@ -30,7 +30,7 @@
             <li><a class="sublink_item" href="#phone5">Phone5</a></li>
           </ul>
 
-          <a id="laptops" class="link block top" href="HTML/laptops.html">Laptops</a>
+          <a id="laptops" class="link block top" href="">Laptops</a>
 
           <ul id="sublink-laptops">
             <li><a class="sublink_item" href="laptop1">Laptop1</a></li>
@@ -40,7 +40,7 @@
             <li><a class="sublink_item" href="laptop5">Laptop5</a></li>
           </ul>
 
-          <a id="tablets" class="link block top" href="HTML/tablets.html">Tablets</a>
+          <a id="tablets" class="link block top" href="">Tablets</a>
 
           <ul id="sublink-tablets">
             <li><a class="sublink_item" href="tablet1">Tablet1</a></li>
@@ -53,8 +53,13 @@
 
         <div class="more">
           <div class="searchBox">
-            <input id="search"onkeyup="search_item()" type="text" placeholder="Search.." />
-            <ol id='list'>
+            <input
+              id="search"
+              onkeyup="search_item()"
+              type="text"
+              placeholder="Search.."
+            />
+            <ol id="list">
               <li class="searchItem">ABC</li>
               <li class="searchItem">123</li>
               <li class="searchItem">Wifi Pineapple Mark VII</li>
@@ -74,7 +79,7 @@
                 </li>
               </div>
 
-              <li><a class="menu__item" href="index.html">Home</a></li>
+              <li><a class="menu__item" href="../index.html">Home</a></li>
               <li>
                 <a class="menu__item" href="HTML/shoppingCart.html"
                   >Shopping Cart <i class="fa-solid fa-cart-shopping"></i
@@ -87,9 +92,14 @@
         </div>
       </nav>
     </header>
-    <div class="banner">
-      <img class="bannerImage" src="img/banner1.jpg" alt="Apple Products" />
-    </div>
-    <div class="angeboteContent">Die neuesten Laptops</div>
+    <body>
+      <div class="things">
+        <div class="thing1"> <div>a</div><div>b</div><div>c</div></div>
+        <div class="thing1"> <div>a</div> <div>b</div> <div>c</div></div>
+        <div class="thing1"> <div>a</div><div>b</div><div>c</div></div>
+        <div class="thing1"><div>a</div><div>b</div><div>c</div></div>
+        <div class="thing1"><div>a</div><div>b</div><div>c</div></div>
+      </div>
+    </body>
   </body>
 </html>
